vlib/v/checker/tests/unimplemented_interface_d.out
vlib/v/checker/tests/unimplemented_interface_d.vv:7:5: notice: unused parameter: `c`
    5 | struct Cat {}
    6 | 
    7 | fn (c Cat) speak() {}
      |     ^
    8 | 
    9 | fn foo(a Animal) {}
vlib/v/checker/tests/unimplemented_interface_d.vv:9:8: notice: unused parameter: `a`
    7 | fn (c Cat) speak() {}
    8 | 
    9 | fn foo(a Animal) {}
      |        ^
   10 | 
   11 | fn main() {
vlib/v/checker/tests/unimplemented_interface_d.vv:12:6: error: `Cat` incorrectly implements method `speak` of interface `Animal`: expected 2 parameter(s), not 1
   10 | 
   11 | fn main() {
   12 |     foo(Cat{})
      |         ~~~~~
   13 | }
Details: main.Animal has `fn speak(x main.Animal, s string)`
         main.Cat has `fn speak(c main.Cat)`
