vlib/v/checker/tests/unimplemented_interface_d.vv
interface Animal {
	speak(s string)
}

struct Cat {}

fn (c Cat) speak() {}

fn foo(a Animal) {}

fn main() {
	foo(Cat{})
}
